tests/expectations/compiler/constructor/checksum_constructor_does_not_match_fail.out
DCE_ENABLED:
Error [ESAZ0374011]: The constructor is not well-formed for the 'checksum' upgrade configuration.
    --> compiler-test:11:5
     |
  11 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
  12 |         if self.edition >= 0u16 {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
  13 |             let expected: [u8; 32] = Mapping::get(expected_checksum, true);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  14 |             assert_eq(self.checksum, expected);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  15 |         }
     |         ^
  16 |     }
     |     ^
     |
     = 
The expected constructor is:
```
async constructor() {
    if self.edition > 0u16 {
        let expected: [u8; 32] = Mapping::get(expected_checksum, true);
        assert_eq(self.checksum, expected);
    }
}
```

For more information, please refer to the documentation: TODO
    

DCE_DISABLED:
Error [ESAZ0374011]: The constructor is not well-formed for the 'checksum' upgrade configuration.
    --> compiler-test:11:5
     |
  11 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
  12 |         if self.edition >= 0u16 {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
  13 |             let expected: [u8; 32] = Mapping::get(expected_checksum, true);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  14 |             assert_eq(self.checksum, expected);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  15 |         }
     |         ^
  16 |     }
     |     ^
     |
     = 
The expected constructor is:
```
async constructor() {
    if self.edition > 0u16 {
        let expected: [u8; 32] = Mapping::get(expected_checksum, true);
        assert_eq(self.checksum, expected);
    }
}
```

For more information, please refer to the documentation: TODO
    
